infrastructure/sample/ingress-resource-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-2
spec:
  ingressClassName: nginx
  rules:
  - host: aab0fb8373da347b2bbec19c27622548-ed034f803fa8b4ac.elb.ap-southeast-1.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-deploy-main
            port:
              number: 80
  - host: aab0fb8373da347b2bbec19c27622548-ed034f803fa8b4ac.elb.ap-southeast-1.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-deploy-blue
            port:
              number: 80
  - host: aab0fb8373da347b2bbec19c27622548-ed034f803fa8b4ac.elb.ap-southeast-1.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-deploy-green
            port:
              number: 80
